feat: number has been registered

--- a/src/Components/PostPage/style.css
+++ b/src/Components/PostPage/style.css
@@ -84,6 +84,12 @@ h3 {
   gap: 24px;
 }
 
+.cnt {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
 .post-page__intro {
   display: flex;
   gap: 30px;
